[package]
name = "docker-direct"
version = "0.2.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
bollard = "0.16.1"
clap = { version = "4.5.5", features = ["derive"] }
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"]}
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
