[package]
name = "docker-direct"
version = "0.2.3"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.9"
bollard = "0.18.1"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"]}
tokio-stream = "0.1.16"
tokio-util = "0.7.13"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
