[package]
name = "docker-direct"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
askama = "0.12.1"
axum = "0.8.1"
bollard = "0.18.1"
clap = { version = "4.5.23", features = ["derive"] }
craftping = { version = "0.7", default-features = false, features = ["async-tokio"] }
rcon = { version = "0.6", features = ["rt-tokio"] }
futures-util = "0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
